# zentra

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: build-artifacts.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: profiles.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  paste.rs  tray.rs
src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs  vad.rs
src-tauri/src/orchestrator/: circuit_breaker.rs  metrics.rs  mod.rs  provider_registry.rs  retry.rs
src-tauri/src/prompt_engine/: clarity.rs  mod.rs  profiles.rs  types.rs
src-tauri/src/prompt_engine/llm/: gemini.rs  groq.rs  mod.rs  ollama.rs  openrouter.rs
src-tauri/src/session/: mod.rs  progress.rs  segment.rs  stitcher.rs
src-tauri/src/stt/: elevenlabs.rs  groq.rs  mod.rs  types.rs  vosk.rs  whisper.rs
src/components/FloatingBar/: FloatingBar.tsx  ModeToggle.tsx  RecordButton.tsx  Waveform.tsx  index.ts
src/components/Toast/: Toast.tsx
src/dashboard/: Dashboard.tsx  Sidebar.tsx  types.ts
src/dashboard/sections/: History.tsx  HistoryItem.tsx  StatsBar.tsx
src/hooks/: useAudioLevel.ts  useRecording.ts
src/setup/: SetupComplete.tsx  SetupWizard.tsx  types.ts
src/styles/: globals.css
src/types/: toast.ts
src/window/: WindowRoot.tsx
(+4 files in other folders)
