[package]
name = "voice-prompt"
version = "1.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_prompt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
onnx = ["ort"]
vosk-stt = ["vosk"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"], optional = true }

# P03: STT Adapters
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
base64 = "0.21"
thiserror = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
vosk = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1.10"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
